--- a/app/css/main.css
+++ b/app/css/main.css
@@ -20,3 +20,10 @@ th {
 #compList th, td{
     width: 50px;
 }
+#compList, #runtimes tr:hover{
+    background-color: lightgray;
+    cursor: pointer;
+}
+.modal-header{
+    background-color: lightblue;
+}
